--- a/Cafeteria/src/view/formPedido.form
+++ b/Cafeteria/src/view/formPedido.form
@@ -321,7 +321,7 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="0">
                 <Column editable="false" title="N&#xba;" type="java.lang.Object"/>
-                <Column editable="false" title="Mesa" type="java.lang.Object"/>
+                <Column editable="false" title="Comanda" type="java.lang.Object"/>
                 <Column editable="false" title="Item" type="java.lang.Object"/>
                 <Column editable="false" title="Quantidade" type="java.lang.Object"/>
                 <Column editable="false" title="Pre&#xe7;o" type="java.lang.Object"/>
